--- a/pages/box-sets.html
+++ b/pages/box-sets.html
@@ -217,7 +217,7 @@
 </main>
 
 <footer class="footer">
-    <div>
+    <div class="redesSociales">
         <h3 style="color: #541D5E;">Redes Sociales</h3>
             <ul style="list-style: none; padding-left: 0;">
                 <li> <a href="https://es-la.facebook.com/" target="_blank">Facebook</a> </li>
@@ -225,14 +225,14 @@
                 <li> <a href="https://www.tiktok.com/" target="_blank">Tik Tok</a> </li>
             </ul>
     </div>
-    <div>
+    <div class="politicas">
         <h3 style="color: #541D5E;">Políticas</h3>
             <ul style="list-style: none; padding-left: 0;">
                 <li style="color: #A83ABB;">Envíos</li>
                 <li style="color: #A83ABB;">Garantías</li>
             </ul>
     </div>
-    <div>
+    <div class="contactos">
         <h3 style="color: #541D5E;">Contáctanos</h3>
             <ul style="list-style: none; padding-left: 0;">
                 <li style="color: #A83ABB;">Dirección:</li>
